force-app/main/default/objects/Premises__c/Premises__c.object-meta.xml
<CustomObject>
    <label>Premises</label>
    <nameField>
        <label>Premise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>