force-app/main/default/objects/Premises__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the premises is</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>