force-app/main/default/objects/Premises__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street where the premises is</description>
    <label>Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>