force-app/main/default/objects/Premises__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Choose the type of premises when more similar by yours</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tent</fullName>
            </value>
            <value>
                <fullName>under canopy</fullName>
            </value>
            <value>
                <fullName>castle</fullName>
            </value>
            <value>
                <fullName>farm house</fullName>
            </value>
            <value>
                <fullName>modern banquet hall</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>